# arc-theme

./: build.sh  meson.build
common/gtk-3.0/sass/: _colors.scss  _common.scss
common/gtk-4.0/sass/: _colors.scss
common/plank/: dock.theme  meson.build
